docs: use Sphinx autodoc instead of autosummary to generate API documentation
Additional changes:
 - Use Sphinx extension `viewcode` to add links to API docs to jump to source code views
 - Graph classes updated to use `from __future__ import annotations` along with quoting the type alias `GraphPrimitive` to prevent Sphinx from unfolding the type hint in the docs. This results in more legible documentation.
 - Add links to open Jupyter notebooks in Colab.
 - Add pyproject.toml file to configure Black code formatter.
 - Update pylintrc to disable `anomalous-backslash-in-string`, since backslashes are needed to escape Sphinx markdown characters within docstrings, for example, vertical bars.
 - Finish first draft of Contributor Guide and Core Developer Guide

--- a/docs/source/tutorials/getting_started.ipynb
+++ b/docs/source/tutorials/getting_started.ipynb
@@ -27,12 +27,9 @@
     "tags": []
    },
    "source": [
-    "# Getting Started\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/getting_started.ipynb)\n",
     "\n",
-    "## Installation\n",
-    "\n",
-    "\n",
-    "\n"
+    "# Tutorial: Getting Started\n"
    ]
   },
   {
@@ -223,15 +220,6 @@
    ],
    "source": [
     "g['s']['y'].weight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(s_paths)"
    ]
   },
   {
