docs: update docstrings to adhere to Sphinx standards
* Imported annotations from __future__ so that when types are quoted, Sphinx will not unfold in the docs.
* Update links to classes and functions and test to ensure not broken.
* References changed from numbered list to instead reference the last name initials of authors followed by year of publication. For example, the old style was [1] and the new style is [CLRS2009].
* Optional type hint: only use in method and function signatures for arguments that default to None.
* Optional: change docstring Args from variable (str, optional) to variable: Optional;
* Add LaTex math formatting to docstrings to improve presentation and legibility.
* For large modules, add summary of classe and functions in the module docstring, and if appropriate, See Also section.
* Add "Attributes" sections to class docstrings.

Fixes #1

--- a/docs/source/tutorials/getting_started.ipynb
+++ b/docs/source/tutorials/getting_started.ipynb
@@ -27,9 +27,9 @@
     "tags": []
    },
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/getting_started.ipynb)\n",
+    "# Tutorial: Getting Started\n",
     "\n",
-    "# Tutorial: Getting Started\n"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/getting_started.ipynb)\n"
    ]
   },
   {
@@ -188,25 +188,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "set()"
+      "text/plain": "{<vertizee.classes.edge.DiEdge at 0x7fb034658460>,\n <vertizee.classes.edge.DiEdge at 0x7fb034658520>}"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 9
     }
    ],
    "source": [
-    "g['s'].edges_incoming"
+    "g['s'].edges_outgoing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['(s, y)', '(s, t)']"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "[str(edge) for edge in g['s'].edges_outgoing]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +233,7 @@
       "text/plain": "5.0"
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 11
     }
    ],
    "source": [
@@ -224,10 +242,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "4"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "g = vz.MultiDiGraph()\n",
+    "edge01 = g.add_edge(0, 1)\n",
+    "g.add_edge(0, 1)\n",
+    "g.add_edge(1, 0)\n",
+    "g.add_edge(2, 0)\n",
+    "g[0].degree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "edge01.parallel_edge_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0"
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "g[1][0].parallel_edge_count"
+   ]
   }
  ]
 }
