--- a/docs/source/tutorials/shortest_paths.ipynb
+++ b/docs/source/tutorials/shortest_paths.ipynb
@@ -27,11 +27,9 @@
     "tags": []
    },
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/shortest_paths.ipynb)\n",
-    "\n",
     "# Tutorial: Shortest Paths\n",
     "\n",
-    "\n"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/shortest_paths.ipynb)\n"
    ]
   },
   {
