--- a/docs/source/tutorials/search.ipynb
+++ b/docs/source/tutorials/search.ipynb
@@ -27,12 +27,9 @@
     "tags": []
    },
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/bfs_dfs.ipynb)\n",
+    "# Tutorial: Search\n",
     "\n",
-    "# Tutorial: Breadth-First and Depth-First Search\n",
-    "\n",
-    "\n",
-    "\n"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/search.ipynb)\n"
    ]
   },
   {
