docs(classes): add docstrings for generic type variables used by collection classes
Docstrings on generic type variables ensures that they appear in the Sphinx documentation. This commit also updated links in the documentation index for the collection classes to point to Sphinx documents rather than the source code on GitHub.

--- a/docs/source/tutorials/getting_started.ipynb
+++ b/docs/source/tutorials/getting_started.ipynb
@@ -29,7 +29,9 @@
    "source": [
     "# Tutorial: Getting Started\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/getting_started.ipynb)\n"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/getting_started.ipynb)\n",
+    "\n",
+    "Welcome to Vertizee, an object-oriented, typed graph library. Graphs are built from vertices and edges \n"
    ]
   },
   {
