--- a/docs/source/tutorials/connected_components.ipynb
+++ b/docs/source/tutorials/connected_components.ipynb
@@ -75,7 +75,7 @@
     "# from vertizee import ShortestPath, VertexDict\n",
     "from vertizee.algorithms import shortest_paths_dijkstra\n",
     "\n",
-    "s_paths: vz.VertexDict[vz.ShortestPath] = shortest_paths_dijkstra(g, source='s', find_path_lengths_only=False)\n",
+    "s_paths: vz.VertexDict[vz.ShortestPath] = shortest_paths_dijkstra(g, source='s', save_paths=False)\n",
     "len(s_paths)\n"
    ]
   }
