feat(classes): graph classes support for double-vertex index edge lookup and for edge and vertex objects override __getitem__ to access the `attr` dictionary
Previously, the graph classes used the syntax graph[vertex1][vertex2] to lookup edges. Syntax is now graph[vertex1, vertex2]. This change enables the Vertex and Edge classes to override __getitem__ to provide direct access to the `attr` dictionary attribute, such as `graph[vertex1]["color"] = "blue"` instead of `graph[vertex1].attr["color"] = "blue"`.

PR Closes #4

--- a/docs/source/tutorials/getting_started.ipynb
+++ b/docs/source/tutorials/getting_started.ipynb
@@ -278,8 +278,7 @@
     }
    ],
    "source": [
-    "# TODO(cpeisert): Update syntax to g[4, 4].is_loop()\n",
-    "g[4][4].is_loop()"
+    "g[4, 4].is_loop()"
    ]
   },
   {
@@ -320,8 +319,7 @@
    "source": [
     "g.add_edge(9, 10, weight=5.0)\n",
     "g.add_edges_from([(10, 11, 3.0), (10, 12, 2.5)])\n",
-    "# TODO(cpeisert) - Update accessor syntax to g[10, 12]\n",
-    "g[10][12].weight"
+    "g[10, 12].weight"
    ]
   },
   {
@@ -443,8 +441,7 @@
    ],
    "source": [
     "g2 = vz.MultiDiGraph([(\"s\", \"t\"), (\"t\", \"u\"), (\"u\", \"v\")])\n",
-    "# TODO(cpeisert): Update syntax to type(g2[\"s\", \"t\"])\n",
-    "type(g2[\"s\"][\"t\"])"
+    "type(g2[\"s\", \"t\"])"
    ]
   },
   {
