feat(classes): weighted graphs include edge weight for edge string representation
Closes #6

--- a/docs/source/tutorials/getting_started.ipynb
+++ b/docs/source/tutorials/getting_started.ipynb
@@ -486,7 +486,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{t}"
+      "text/plain": "{s, t}"
      },
      "metadata": {},
      "execution_count": 11
@@ -505,7 +505,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "5"
+      "text/plain": "4"
      },
      "metadata": {},
      "execution_count": 12
@@ -519,38 +519,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "{(s, s), (s, t), (s, t), (t, s)}"
-     },
-     "metadata": {},
-     "execution_count": 13
-    }
-   ],
-   "source": [
-    "g2['s'].edges"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{(s, t), (s, t)}"
+      "text/plain": "{(s, s), (s, t), (t, s)}"
      },
      "metadata": {},
      "execution_count": 14
     }
    ],
    "source": [
-    "g2['s'].edges_outgoing"
+    "g2['s'].edges"
    ]
   },
   {
@@ -561,10 +543,28 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{(t, s)}"
+      "text/plain": "{(s, s), (s, t)}"
      },
      "metadata": {},
      "execution_count": 15
+    }
+   ],
+   "source": [
+    "g2['s'].edges_outgoing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{(s, s), (t, s)}"
+     },
+     "metadata": {},
+     "execution_count": 16
     }
    ],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -593,7 +593,7 @@
       "text/plain": "True"
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 17
     }
    ],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
       "text/plain": "1"
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 18
     }
    ],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
       "text/plain": "False"
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 19
     }
    ],
    "source": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
       "text/plain": "0"
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 20
     }
    ],
    "source": [
@@ -675,7 +675,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "1"
+      "text/plain": "3"
      },
      "metadata": {},
      "execution_count": 23
@@ -683,21 +683,22 @@
    ],
    "source": [
     "g4.add_edge(\"x\", \"y\")\n",
+    "g4.add_edge(\"x\", \"y\")\n",
     "edge_xy.parallel_edge_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{(x, y), (x, y)}"
+      "text/plain": "{(x, y), (x, y), (x, y), (x, y)}"
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 24
     }
    ],
    "source": [
