feat(classes): rename Vertex class getters for adjacent vertices and incident edges
Graph libraries such as NetworkX use the abbreviation "adj" for "adjacent", which in some cases makes properties and methods more readable. The Vertex getters for adjacent vertices have been renamed to begin with "adj_" instead of "adjacent_". The getters for incident edges have been renamed to start with "incident_" to add semantic clarity at the expense of short property names.

Closes #12

--- a/docs/source/tutorials/getting_started.ipynb
+++ b/docs/source/tutorials/getting_started.ipynb
@@ -471,9 +471,9 @@
   },
   {
    "source": [
-    "## Adjacent edges\n",
+    "## Incident edges\n",
     "\n",
-    "Vertex objects keep track of their adjacent edges and classify them into loops and non-loops as well as incoming and outgoing (when the edges are directed)."
+    "Vertex objects keep track of their incident edges and classify them into loops and non-loops as well as incoming and outgoing (when the edges are directed)."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -494,7 +494,7 @@
    ],
    "source": [
     "g2 = vz.MultiDiGraph([(\"s\", \"s\"), (\"s\", \"t\"), (\"t\", \"s\")])\n",
-    "g2['s'].adjacent_vertices"
+    "g2['s'].adj_vertices"
    ]
   },
   {
@@ -532,7 +532,7 @@
     }
    ],
    "source": [
-    "g2['s'].edges"
+    "g2['s'].incident_edges"
    ]
   },
   {
@@ -550,7 +550,7 @@
     }
    ],
    "source": [
-    "g2['s'].edges_outgoing"
+    "g2['s'].incident_edges_outgoing"
    ]
   },
   {
@@ -568,7 +568,7 @@
     }
    ],
    "source": [
-    "g2[\"s\"].edges_incoming"
+    "g2[\"s\"].incident_edges_incoming"
    ]
   },
   {
@@ -702,7 +702,7 @@
     }
    ],
    "source": [
-    "g4[\"x\"].edges_outgoing"
+    "g4[\"x\"].incident_edges_outgoing"
    ]
   },
   {
