refactor: move algorithm utility classes under the algorithms package
* Algorithm utility classes, such as ShortestPath, were previously located under the classes package. These have been moved to vertizee/algorithms/algo_utilities and the module files have been renamed with the suffix "_utils".
* Data structures such as UnionFind were in vertizee/classes/collections. This package has been renamed from "collections" to "data_structures".
* Several packages were missing __init__.py files. These have been added.
* mypy - Updated requirements/developer.txt to use mypy instead of pytype and updated developer Contributor Guide accordingly.
* py.typed - added this new file to vertizee package to make it PEP 561 compliant indicating that Vertizee supports type checking.
* docs - updated documentation to reflect new package structure.

--- a/docs/source/tutorials/connected_components.ipynb
+++ b/docs/source/tutorials/connected_components.ipynb
@@ -27,10 +27,9 @@
     "tags": []
    },
    "source": [
-    "# Tutorial: Connected Components\n",
-    "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cpeisert/vertizee/blob/master/docs/source/tutorials/connected_components.ipynb)\n",
-    "\n"
+    "\n",
+    "# Tutorial: Connected Components"
    ]
   },
   {
@@ -78,6 +77,13 @@
     "s_paths: vz.VertexDict[vz.ShortestPath] = shortest_paths_dijkstra(g, source='s', save_paths=False)\n",
     "len(s_paths)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
