feat: class redesign (work in progress)
- For classes that should not be instatiated by library consumers, change to abstract base classes.
- Add classes for edges and vertices corresponding to specific needs of graphs, digraphs, multigraphs, and multidigraphs.
- Remove SimpleGraph class to reduce number of graph types.
- Redesign MultiEdge and MultiDiEdge to store collections of parallel connections, where each connection may specify its own weight and custom attributes.
- Use `__slots__` for all classes to reduce memory footprint and increase speed.
- Resign _IncidentEdges class in the vertex module to use only one collection to store incident edge labels. Previously, each _IncidentEdge object had six collections to store adjacent vertices and incident edges.

--- a/docs/source/tutorials/getting_started.ipynb
+++ b/docs/source/tutorials/getting_started.ipynb
@@ -38,7 +38,7 @@
     "import vertizee as vz\n",
     "```\n",
     "\n",
-    "## Fundamentals overview\n",
+    "## Definition of a graph\n",
     "\n",
     "A graph $G$ is defined as $G = (V,\\ E)$, where $V$ is a set of points called **vertices** (plural of *vertex*) and $E$ is a set of **edges**. An unordered pair of vertices defines an **undirected edge** and an ordered pair of vertices defines\n",
     "a **directed edge**.\n",
@@ -49,12 +49,88 @@
     "* `Edge` - An undirected edge whose two vertices may appear in any order.\n",
     "* `DiEdge` - A directed edge whose starting vertex is called the *tail* and whose destination vertex\n",
     "  is called the *head*.\n",
-    "* `GraphBase` - A base class from which all graph classes inherit: `SimpleGraph`, `Graph`, `MultiGraph`, `DiGraph`, `MultiDiGraph`.\n",
+    "* `GraphBase` - A base class from which all graph classes inherit: `SimpleGraph`, `Graph`, `MultiGraph`, `DiGraph`, `MultiDiGraph`."
+   ]
+  },
+  {
+   "source": [
+    "## Introduction to data types\n",
     "\n",
+    "## TODO(cpeisert): Update section\n",
+    "\n",
+    "\n",
+    "### Graph classes\n",
+    "\n",
+    "The `GraphType` type alias is a synonym for abstract base class `GraphBase`, which is the parent from which all concrete graph classes derive. However, this class should not be used directly. Instead, you should use one of the graph classes shown in the table below, all of which inherit from `GraphBase`.\n",
+    "\n",
+    "<table border='1' cellpadding=\"3\" cellspacing=\"0\">\n",
+    "<thead>\n",
+    "<tr>\n",
+    "    <th align=\"left\">Graph class (concrete)</th>\n",
+    "    <th align=\"center\">Directed</th>\n",
+    "    <th align=\"center\">Parallel edges</th>\n",
+    "    <th align=\"center\">Edge class (abstract)</th>\n",
+    "    <th align=\"center\">Vertex class (abstract)</th>\n",
+    "</tr>\n",
+    "</thead>\n",
+    "<tbody>\n",
+    "<tr>\n",
+    "    <td><code>Graph</code></td>\n",
+    "    <td align=\"center\">No</td>\n",
+    "    <td align=\"center\">No</td>\n",
+    "    <td align=\"center\">Edge</td>\n",
+    "    <td align=\"center\">Vertex</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "    <td><code>MultiGraph</code></td>\n",
+    "    <td align=\"center\">No</td>\n",
+    "    <td align=\"center\">Yes</td>\n",
+    "    <td align=\"center\">MultiEdge</td>\n",
+    "    <td align=\"center\">Vertex</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "    <td><code>DiGraph</code></td>\n",
+    "    <td align=\"center\">Yes</td>\n",
+    "    <td align=\"center\">No</td>\n",
+    "    <td align=\"center\">DiEdge</td>\n",
+    "    <td align=\"center\">DiVertex</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "    <td><code>MultiDiGraph</code></td>\n",
+    "    <td align=\"center\">Yes</td>\n",
+    "    <td align=\"center\">Yes</td>\n",
+    "    <td align=\"center\">MultiDiEdge</td>\n",
+    "    <td align=\"center\">DiVertex</td>\n",
+    "</tr>\n",
+    "</tbody>\n",
+    "</table>\n",
+    "\n",
+    "For practical purposes, the most important decision is whether or not you will be working with an undirected graph or a digraph. For maximum flexibility, either use `MultiGraph` (undirected) or `MultiDiGraph` (directed). \n",
+    "\n",
+    "### TODO(cpeisert): Explain memory penalty for using MultiGraphs vs. Graphs/DiGraphs in terms of extra dictionary per edge.\n",
+    "\n",
+    "The classes `Graph` and `DiGraph` are provided in case you want to prevent parallel edges (they raise an exception if adding an edge would result in parallel edges).\n",
+    "\n",
+    "The digraph classes (`DiGraph` and `MultiDiGraph`) use `DiEdge` objects, whereas the other graph classes use `Edge` objects.\n",
+    "\n",
+    "\n",
+    "### Edge classes\n",
+    "\n",
+    "\n",
+    "### Vertex classes\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "## Vertices\n",
     "\n",
     "Each vertex must be assigned a unique label. Vertex labels (for example, '1', '2', 'three') are stored as strings. This means that the integer 1 and the string '1' refer to the same label. "
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -231,6 +307,8 @@
   },
   {
    "source": [
+    "## TODO(cpeisert): Move the edge instantiation notes into the section \"Vertizee data types\"\n",
+    "\n",
     "Attempting to instantiate an `Edge` or `DiEdge` object directly using the `__init__` method will raise an error."
    ],
    "cell_type": "markdown",
@@ -283,6 +361,8 @@
   },
   {
    "source": [
+    "## TODO(cpeisert): Update this section.\n",
+    "\n",
     "`Edge` objects have properties `vertex1` and `vertex2`, which are assigned in order. For example, the first vertex passed to `add_edge` is assigned to `vertex1`. However, the string representation of **undirected edges** always shows the vertices sorted in lexicographic order. This is to reinforce the fact that for undirected edges, the vertex order does not matter and to provide a consistent representation. For example, undirected edge $(1,\\ 2)$ is the same as $(2,\\ 1)$ and will always be printed `(1, 2)`.\n",
     "\n",
     "By contrast, **directed edges** always display vertices in the same order: `vertex1` (the *tail*) followed by `vertex2` (the *head*). `DiEdge` objects also have properties `tail` and `head` that serve as aliases for `vertex1` and `vertex2` respectively.\n",
@@ -358,67 +438,9 @@
   },
   {
    "source": [
-    "## Graph classes\n",
+    "## Graph constructors\n",
     "\n",
-    "The `GraphBase` class contains the data structures and logic to manage directed and undirected graphs, as well as graphs that allow parallel edges. However, this class should not be used directly. Instead, you should use one of the graph classes shown in the table below, all of which inherit from `GraphBase`.\n",
-    "\n",
-    "### Which graph class should I use?\n",
-    "\n",
-    "<table border='1' cellpadding=\"3\" cellspacing=\"0\">\n",
-    "<thead>\n",
-    "<tr>\n",
-    "    <th align=\"left\">Class</th>\n",
-    "    <th align=\"center\">Type</th>\n",
-    "    <th align=\"center\">Self-loops</th>\n",
-    "    <th align=\"center\">Parallel edges</th>\n",
-    "</tr>\n",
-    "</thead>\n",
-    "<tbody>\n",
-    "<tr>\n",
-    "    <td><code>SimpleGraph</code></td>\n",
-    "    <td align=\"center\">undirected</td>\n",
-    "    <td align=\"center\">No</td>\n",
-    "    <td align=\"center\">No</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "    <td><code>Graph</code></td>\n",
-    "    <td align=\"center\">undirected</td>\n",
-    "    <td align=\"center\">Yes</td>\n",
-    "    <td align=\"center\">No</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "    <td><code>MultiGraph</code></td>\n",
-    "    <td align=\"center\">undirected</td>\n",
-    "    <td align=\"center\">Yes</td>\n",
-    "    <td align=\"center\">Yes</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "    <td><code>DiGraph</code></td>\n",
-    "    <td align=\"center\">directed</td>\n",
-    "    <td align=\"center\">Yes</td>\n",
-    "    <td align=\"center\">No</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "    <td><code>MultiDiGraph</code></td>\n",
-    "    <td align=\"center\">directed</td>\n",
-    "    <td align=\"center\">Yes</td>\n",
-    "    <td align=\"center\">Yes</td>\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>\n",
-    "\n",
-    "For practical purposes, the most important decision is whether or not you will be working with an undirected graph or a digraph. For maximum flexibility, either use `MultiGraph` (undirected) or `MultiDiGraph` (directed). \n",
-    "\n",
-    "The classes `SimpleGraph`, `Graph`, and `DiGraph` are provided in case you want to be certain that there are no parallel edges, since these classes will raise errors upon attempting to add a parallel edge. `SimpleGraph` will also raise an error if attempting to add a loop (i.e. an edge that starts and ends at the same vertex).\n",
-    "\n",
-    "The digraph classes (`DiGraph` and `MultiDiGraph`) use `DiEdge` objects, whereas the other graph classes use `Edge` objects."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "## Graph constructors and type aliases\n",
+    "## TODO(cpeisert): Update this section based on new graph types.\n",
     "\n",
     "The graph constructors provide a flexible option for initializing a graph with edges. Edges may be specified using tuples of vertex labels or with an iterable object, such as a list of edge tuples. Using the constructor to add edges is equivalent to the method `add_edges_from`."
    ],
@@ -446,34 +468,9 @@
   },
   {
    "source": [
-    "The graph classes define the `__init__` method as:\n",
-    "\n",
-    "```python\n",
-    "def __init__(self, *args: GraphPrimitive):\n",
-    "```\n",
-    "\n",
-    "The `GraphPrimitive` type alias includes graph primitives such as vertices and edges, as well as edges defined as tuples of vertices. In addition, `GraphPrimitive` is defined for iterable containers of primitives, such as lists of edge tuples.\n",
-    "\n",
-    "**Type alias definitions**\n",
-    "\n",
-    "* `VertexType = Union[int, str, Vertex]`\n",
-    "* `EdgeType = Union[DiEdge, Edge]`\n",
-    "* `EdgeVertexPair = Tuple[VertexType, VertexType]`\n",
-    "* `EdgeTupleWeighted = Tuple[VertexType, VertexType, EdgeWeight]`\n",
-    "* `EdgeTuple = Union[EdgeVertexPair, EdgeTupleWeighted]`\n",
-    "* `GraphPrimitiveTerminal = Union[EdgeTuple, EdgeType, VertexType]`\n",
-    "* `GraphPrimitive = Union[GraphPrimitiveTerminal, Iterable[GraphPrimitiveTerminal]]`\n",
-    "\n",
-    "The end result is that arguments of type `GraphPrimitive` provide flexibility in specifying vertices and edges using objects, vertex labels, tuples of vertex labels, and iterable containers of these same primitives."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
     "## Incident edges\n",
     "\n",
-    "Vertex objects keep track of their incident edges and classify them into loops and non-loops as well as incoming and outgoing (when the edges are directed)."
+    "`Vertex` objects keep track of their incident edges and classify them into loops and non-loops. In directed graphs, `DiVertex` objects also track which edges are incoming and outgoing."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -573,7 +570,9 @@
   },
   {
    "source": [
-    "## Parallel edges\n",
+    "## Multigraphs and Parallel edges\n",
+    "\n",
+    "## TODO(cpeisert): Update this section.\n",
     "\n",
     "Parallel edges are tracked by existing edge objects. For example, in an undirected graph, an edge $(s,\\ t)$ is the same as edge $(t,\\ s)$, so any edge with endpoints $s$ and $t$ will be stored in the same `Edge` object."
    ],
@@ -709,6 +708,8 @@
    "source": [
     "## Removing elements\n",
     "\n",
+    "## TODO(cpeisert): Update this section.\n",
+    "\n",
     "### Edge removal\n",
     "Since each edge object may represent multiple parallel edges, there are two methods for removing edges from a graph.\n",
     "\n",
@@ -755,6 +756,58 @@
     "## Reading and writing graphs\n",
     "\n",
     "Vertizee currently supports reading and writing graphs in adjacency list format. For more information, see [Adjacency List Files](# TODO(cpeisert): insert hyperlink to online documentation) in the API reference."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Data types in detail\n",
+    "\n",
+    "## TODO(cpeisert): Start by explaining concepts of breaking down types by graph type, abstract classes and concrete classes, type aliases, and the virtual `vertizee.typing` package for importing non-instantiable types. Explain logic behind `GraphType`, `EdgeType`, `VertexType`, and `GraphPrimitive` (i.e. the edge and vertex primitives that comprise a graph).\n",
+    "\n",
+    "\n",
+    "<table border='1' cellpadding=\"3\" cellspacing=\"0\">\n",
+    "<thead>\n",
+    "<tr>\n",
+    "    <th align=\"left\">Graph class (concrete)</th>\n",
+    "    <th align=\"center\">Directed</th>\n",
+    "    <th align=\"center\">Parallel edges</th>\n",
+    "    <th align=\"center\">Edge class (abstract)</th>\n",
+    "    <th align=\"center\">Vertex class (abstract)</th>\n",
+    "</tr>\n",
+    "</thead>\n",
+    "<tbody>\n",
+    "<tr>\n",
+    "    <td><code>Graph</code></td>\n",
+    "    <td align=\"center\">No</td>\n",
+    "    <td align=\"center\">No</td>\n",
+    "    <td align=\"center\">Edge</td>\n",
+    "    <td align=\"center\">Vertex</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "    <td><code>MultiGraph</code></td>\n",
+    "    <td align=\"center\">No</td>\n",
+    "    <td align=\"center\">Yes</td>\n",
+    "    <td align=\"center\">MultiEdge</td>\n",
+    "    <td align=\"center\">Vertex</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "    <td><code>DiGraph</code></td>\n",
+    "    <td align=\"center\">Yes</td>\n",
+    "    <td align=\"center\">No</td>\n",
+    "    <td align=\"center\">DiEdge</td>\n",
+    "    <td align=\"center\">DiVertex</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "    <td><code>MultiDiGraph</code></td>\n",
+    "    <td align=\"center\">Yes</td>\n",
+    "    <td align=\"center\">Yes</td>\n",
+    "    <td align=\"center\">MultiDiEdge</td>\n",
+    "    <td align=\"center\">DiVertex</td>\n",
+    "</tr>\n",
+    "</tbody>\n",
+    "</table>"
    ],
    "cell_type": "markdown",
    "metadata": {}
