feat: class redesign (work in progress) - vertex module complete
- Graph classes (Graph, DiGraph, MultiGraph, MultiDiGraph) have been consolidated into the graph module.
- The graph method `contract_edge()` has been migrated to the edge module API.
- In the primitives_parsing module, the EdgeData and VertexData classes have been updated with properties to hide implementation details around whether or not they wrap instances of EdgeClass or VertexClass.
- Edge class hiearchy modified so that there are two separate inheritance trees: 1) Connection and 2) MultiConnection. Connection specifies an API that applies to all single-edge graph connections, including views of connections within multiedges. MultiConnection defines an API for all multiedge graph connections.
- Vertex class hiearchy now corresponds to the four primary graph types: Vertex, DiVertex, MultiVertex, MultiDiVertex.
- Vertex method `get_adj_for_search` removed from API.
- Vertex tests rewritten.

--- a/docs/source/tutorials/getting_started.ipynb
+++ b/docs/source/tutorials/getting_started.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "## Introduction to data types\n",
     "\n",
-    "## TODO(cpeisert): Update section\n",
+    "## TODO(cpeisert): Update section (need simple picture illustrating each graph type)\n",
     "\n",
     "\n",
     "### Graph classes\n",
