feat(docs): add a bibliography and a glossary

--- a/docs/source/tutorials/getting_started.ipynb
+++ b/docs/source/tutorials/getting_started.ipynb
@@ -31,8 +31,7 @@
     "\n",
     "# Tutorial: Getting Started\n",
     "\n",
-    "Welcome to Vertizee, an object-oriented, typed graph library. Vertizee is customarily\n",
-    "imported as:\n",
+    "Welcome to Vertizee, an object-oriented, typed graph library. Vertizee is imported as:\n",
     "\n",
     "```python\n",
     "import vertizee as vz\n",
@@ -40,8 +39,7 @@
     "\n",
     "## Definition of a graph\n",
     "\n",
-    "A graph $G$ is defined as $G = (V,\\ E)$, where $V$ is a set of points called **vertices** (plural of *vertex*) and $E$ is a set of **edges**. An unordered pair of vertices defines an **undirected edge** and an ordered pair of vertices defines\n",
-    "a **directed edge**.\n",
+    "A graph $G$ is defined as $G = (V, E)$, where $V$ is a set of points called **vertices** (plural of *vertex*) and $E$ is a set of **edges**. An unordered pair of vertices defines an **undirected edge** and an ordered pair of vertices defines a **directed edge**.\n",
     "\n",
     "These fundamental graph primitives are represented by the classes:\n",
     "\n",
@@ -711,7 +709,7 @@
     "## TODO(cpeisert): Update this section.\n",
     "\n",
     "### Edge removal\n",
-    "Since each edge object may represent multiple parallel edges, there are two methods for removing edges from a graph.\n",
+    "Since each edge object may represent parallel edges, there are two methods for removing edges from a graph.\n",
     "\n",
     "* `GraphBase.remove_edge_from` - Deletes exactly one edge for each edge matched by `GraphPrimitive` arguments.\n",
     "* `GraphBase.remove_all_edges_from` - Deletes all edges (including parallel edges) for each edge matched by `GraphPrimitive` arguments.\n",
