feat(algorithms): add edmonds algorithm for finding spanning arborescences and branchings in directed graphs
Additional changes:
- Rename package "tree" to "spanning" and split code into modules "directed" and "undirected".
- Update the new glossary of graph theory terms.
- Move all import shortcuts into vertizee.__init__.py so that everything is available from top-level package.
- Update io package to use revised graph APIs.

- Create a bibliography.

Closes #18

--- a/docs/source/bibtex_vertizee.bib
+++ b/docs/source/bibtex_vertizee.bib
@@ -71,6 +71,24 @@
     numpages = {20}
 }
 
+@article{1986:ggst
+    doi = {10.1007/BF02579168},
+    author = {Gabow, H N and Galil, Z and Spencer, T and Tarjan, R E},
+    title = {Efficient Algorithms for Finding Minimum Spanning Trees in Undirected and Directed Graphs},
+    year = {1986},
+    issue_date = {1986},
+    publisher = {Springer-Verlag},
+    address = {Berlin, Heidelberg},
+    volume = {6},
+    number = {2},
+    issn = {0209-9683},
+    url = {https://doi.org/10.1007/BF02579168},
+    journal = {Combinatorica},
+    month = {jan},
+    pages = {109–122},
+    numpages = {14}
+}
+
 @book{2013:jungnickel,
     author = {Jungnickel, Dieter},
     title = {Graphs, Networks and Algorithms},
